demo/nginx-deploy-main2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: nginx
  name: nginx-deploy-main2
spec:
  replicas: 1
  selector:
    matchLabels:
      run: nginx2
  template:
    metadata:
      labels:
        run: nginx2
    spec:
      volumes:
      - name: webdata
        emptyDir: {}
      containers:
      - image: nginx
        name: nginx
        volumeMounts:
        - name: webdata
          mountPath: "/usr/share/nginx/html"
